--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -24,19 +24,19 @@
     "import os\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "# CSV 불러오기\n",
+    "# load CSV \n",
     "df = pd.read_csv(\"/Users/sunghyunkim/Desktop/ReCloset.v3i.tensorflow/train/_annotations.csv\")  # 예시: Roboflow에서 받은 train 라벨 CSV\n",
     "\n",
-    "# 클래스 인코딩\n",
+    "# class encoding \n",
     "le = LabelEncoder()\n",
     "df['label_id'] = le.fit_transform(df['class'])\n",
     "class_names = le.classes_\n",
     "num_classes = len(class_names)\n",
     "\n",
-    "# 이미지별로 그룹핑\n",
+   
     "image_paths = df['filename'].unique()\n",
     "\n",
-    "# TF Dataset용 데이터 포맷 변환\n",
+    "# Data transformation for TF Dataset\n",
     "def load_data(df, img_dir=\"\"):\n",
     "    images = []\n",
     "    targets = []\n",
@@ -84,7 +84,7 @@
     "        layers.Conv2D(128, (3, 3), activation='relu'),\n",
     "        layers.Flatten(),\n",
     "        layers.Dense(128, activation='relu'),\n",
-    "        layers.Dense(num_classes, activation='softmax')  # 클래스 수에 맞게\n",
+    "        layers.Dense(num_classes, activation='softmax')\n",
     "    ])\n",
     "    return model"
    ]
@@ -110,9 +110,9 @@
     "model = build_model(num_classes=num_classes)\n",
     "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "# 간단한 학습용 데이터 준비\n",
+    "# data \n",
     "X_train = tf.stack(train_images)\n",
-    "y_train = [target['class_ids'][0] for target in train_targets]  # 단일 클래스만 추출\n"
+    "y_train = [target['class_ids'][0] for target in train_targets] \n"
    ]
   },
   {
@@ -1027,7 +1027,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 손실(Loss) 시각화\n",
+    "# Loss visualization \n",
     "plt.figure(figsize=(12, 5))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -1039,7 +1039,7 @@
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
     "\n",
-    "# 정확도(Accuracy) 시각화\n",
+    "# Accuracy visualization \n",
     "plt.subplot(1, 2, 2)\n",
     "plt.plot(result.history['accuracy'], label='Train Accuracy')\n",
     "if 'val_accuracy' in result.history:\n",
@@ -1100,14 +1100,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 모델 저장 완료\n"
+      "✅model saved completed \n"
      ]
     }
    ],
    "source": [
-    "# 모델 저장\n",
+    "# model saved \n",
     "model.save('/Users/sunghyunkim/Desktop/ReCloset.v3i.tensorflow/reclosetmodel.h5')\n",
-    "print(\"✅ 모델 저장 완료\")"
+    "print(\"✅ model saved completed \")"
    ]
   },
   {
