--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -25,7 +25,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "# load CSV \n",
-    "df = pd.read_csv(\"/Users/sunghyunkim/Desktop/ReCloset.v3i.tensorflow/train/_annotations.csv\")  # 예시: Roboflow에서 받은 train 라벨 CSV\n",
+    "df = pd.read_csv(\"/Users/sunghyunkim/Desktop/ReCloset.v3i.tensorflow/train/_annotations.csv\") 
     "\n",
     "# class encoding \n",
     "le = LabelEncoder()\n",
